--- a/lesson2/examples/ngif-practice/src/app/chores/chores.component.html
+++ b/lesson2/examples/ngif-practice/src/app/chores/chores.component.html
@@ -3,12 +3,18 @@
     <ul>
         <li *ngFor = 'let chore of chores'>{{chore}}</li>
     </ul>
+    <p class="workHarder" *ngIf = "chores.length > finishedChores.length">Work harder!</p>
 </div>
+
+    
+
 <hr>
 <div class="doneChores">
     <h3>Done Chores</h3>
     <ul>
         <li *ngFor = 'let done of finishedChores'>{{done}}</li>
     </ul>
+    
 </div>
+<p *ngIf = "chores.length === 0 || finishedChores.length >= (chores.length + 3)"><img [src] = "targetImage"/></p>
 <hr>
