--- a/lesson3/examples/src/app/skill-set/skill-set.component.html
+++ b/lesson3/examples/src/app/skill-set/skill-set.component.html
@@ -1,13 +1,22 @@
 <div class="skills">
    <h3>{{listHeading}}</h3>
-   <ol>
+   <ol [style.color]="alternateColor" [type]="bulletType">
       <li *ngFor="let skill of skills">{{skill}}</li>
    </ol>
    <hr>
    <h3>Copy of Skill List</h3>
-   <ol>
-      <li *ngFor="let skill of skills">{{skill}}</li>
+   <ol [class.ol-style]="changeColor">
+      <li (click)="changeColor = !changeColor" *ngFor="let skill of skills">{{skill}}</li>
    </ol>
    <hr>
-   <p>Here is some practice text...</p>
+   <p [class.p-style]="!changeColor" (mouseover)="changeColor = !changeColor">Here is some practice text...</p>
 </div>
+
+
+
+<!--tried to put this into the <p>, to make the color change based on whether changeColor evaluates to true or false, but the text disappears with this inserted-->
+<!--*ngIf = "!changeColor = false"-->
+
+<!--need to include [], but where? and should it be an *ngIf statement, or just the attribute directive?-->
+
+<!-- [style.color] = !changeColor -->
